prvni web final

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="cs" data-bs-theme="dark">
+<html lang="cs" data-bs-theme="light">
 
 <head>
     <meta charset="utf-8">
@@ -45,14 +45,14 @@
                 Architektonické studie<br>
                 Projekty pro povolení stavby<br>
                 Projekty pro provádění stavby<br>
-                Interiéry
+                Projekty interiéru
             </p>
         </div>
 
     </div>
     <div class="text-center">
-        <div class="alert alert-info fs-1 mt-5 d-inline-block" role="alert">
-            🚧&nbsp;Připravujeme pro Vás nový web&nbsp;🚧
+        <div class="alert alert-plain fs-1 mt-5 d-inline-block" role="alert">
+            Připravujeme pro Vás nový web
         </div>
     </div>
 </header>
@@ -87,7 +87,7 @@
     <div class="col-6 col-md-3">
       <div class="gallery-item">
         <img src="assets/images/PROJEKT_INTERIERU.webp" class="img-fluid">
-        <div class="caption text-uppercase">Interiér zasedací místnosti víděňská</div>
+        <div class="caption text-uppercase">Zasedací místnosti víděňská</div>
       </div>
     </div>
     <div class="col-6 col-md-3">
