--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="col-6 col-md-3">
       <div class="gallery-item">
         <img src="assets/images/PROJEKT_INTERIERU.webp" class="img-fluid">
-        <div class="caption text-uppercase">Zasedací místnosti víděňská</div>
+        <div class="caption text-uppercase">Zasedací místnost</div>
       </div>
     </div>
     <div class="col-6 col-md-3">
