--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <!-- Logo taking 25% of the width -->
         <div class="col-12 col-md-6 order-1 order-md-2 text-center">
             <img src="assets/images/logo.svg" class="w-25" alt="Logo">
-            <h1 class="display-4 fw-bold mt-2 mb-0">KVADRATURA</h1>
-            <h1 class="display-4 mt-0 mb-0">KRUHU</h2>
+            <h1 class="nazev display-4 fw-bold mt-2 mb-0">KVADRATURA</h1>
+            <h1 class="nazev display-4 mt-0 mb-0">KRUHU</h2>
             <h2 class="mt-3 fs-2">Architektonický a projekční ateliér</h2>
         </div>
 
